# umfeld-arduino

./: .gitignore  .gitmodules  Brewfile  CMakeLists.txt  README.md  RELEASE_NOTES.md  TODO.md  install-RPI.sh  install-dependencies.sh  install-linux.sh  install-macOS.sh  install-raspberry-pi.sh  install-stable.sh  install-windows-ucrt64.sh  install.sh  update-umfeld-upstream.sh  update-upstream.sh
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: update-umfeld-upstream.sh
deployment/: CMakeLists.txt
deployment/cmake/: UmfeldConfig.cmake.in  umfeld.pc.in
documentation/: Additional-Umfeld-Functions.md  DOCUMENTATION.md  Developing-Applications.md  Known-Differences-Between-Processing-and-Umfeld.md  Known-Issues.md  Processing-Function-Availability-Status.md  ROADMAP.md  Setting-up-Homebrew-on-macOS.md  Tested-Setups.md  Umfeld-CMake-Options.md  Umfeld-Function.md  Umfeld-Functions.md  Umfeld-in-CLion.md  Umfeld-in-Visual-Studio-Code.md  Umfeld-on-RPI.md
examples/Advanced/OSC/: OSC.ino
examples/Advanced/camera/: camera.ino
examples/Advanced/gamepads/: gamepads.ino
examples/Advanced/offscreen/: offscreen.ino
examples/Advanced/serial/: serial.ino
examples/Advanced/texture-filtering/: texture-filtering.ino
examples/Advanced/vertexbuffer/: vertexbuffer.ino
examples/Audio/audio-device/: audio-device.ino
examples/Audio/fft-analysis/: fft-analysis.ino
examples/Audio/midi-input/: midi-input.ino
examples/Audio/midi-listener/: midi-listener.ino
examples/Audio/midi-output/: midi-output.ino
examples/Audio/oscillator-adsr/: oscillator-adsr.ino
examples/Audio/passthrough/: passthrough.ino
examples/Audio/sampler-per-sample/: sampler-per-sample.ino
examples/Audio/threaded/: threaded.ino
examples/Audio/trigger/: trigger.ino
examples/Audio/trigger-listener/: trigger-listener.ino
examples/Basics/3D-primitives/: 3D-primitives.ino
examples/Basics/lights/: lights.ino
examples/Basics/load-OBJ/: load-OBJ.ino
examples/Basics/load-image/: load-image.ino
examples/Basics/pixels/: pixels.ino
examples/Basics/save-OBJ/: save-OBJ.ino
examples/Basics/save-PDF/: save-PDF.ino
examples/Basics/save-frame/: save-frame.ino
examples/Basics/save-image/: save-image.ino
examples/Basics/shapes/: shapes.ino
examples/Basics/shapes-stroke-and-fill/: shapes-stroke-and-fill.ino
examples/Basics/typography/: typography.ino
examples/Processing/Basics/Arrays/Array/: Array.ino
examples/Processing/Basics/Arrays/Array2D/: Array2D.ino
examples/Processing/Basics/Arrays/ArrayObjects/: ArrayObjects.ino
include/: Capture.h  DrawLib.h  Gamepad.h  Geometry.h  PAudio.h  PFont.h  PGraphics.h  PGraphicsDefault2D.h  PGraphicsOpenGL.h  PGraphicsOpenGL_2_0.h  PGraphicsOpenGL_3.h  PGraphicsOpenGL_3_3_core.h  PGraphicsOpenGLv20.h  PGraphicsOpenGLv33.h  PGraphicsTerminal.h  PImage.h  PShader.h  Serial.h  Shape.h  ShapeRenderer.h  ShapeRendererBatch.h  ShapeRendererBatchOpenGL_3.h  ShapeRendererOpenGL_3.h  SubsystemGraphicsOpenGL.h  Subsystems.h  Triangulator.h  UFont.h  UShape.h  UShapeRenderer.h  UShapeRendererOpenGL_3.h  Umfeld.h  UmfeldCallbacks.h  UmfeldConstants.h  UmfeldDefines.h  UmfeldFunctions.h  UmfeldFunctionsAdditional.h  UmfeldFunctionsGraphics.h  UmfeldRecorder.h  UmfeldSDLOpenGL.h  UmfeldTypes.h  (+4 more)
include/audio/: FFT.h  Reverb.h  Sampler.h
include/libraries/: stb_image_write.h  tiny_obj_loader.h
include/libraries/osc/: OscTypes.h
include/shaders/: ShaderSource.h  ShaderSourceBatchColor.h  ShaderSourceBatchColorLights.h  ShaderSourceBatchColorTexture.h  ShaderSourceBatchTexture.h  ShaderSourceBatchTextureLights.h  ShaderSourceColor.h  ShaderSourceColorLights.h  ShaderSourceColorTexture.h  ShaderSourceColorTextureES.h  ShaderSourceColorTextureLights.h  ShaderSourceFullscreen.h  ShaderSourceLine.h  ShaderSourcePoint.h  ShaderSourceTexture.h  ShaderSourceTextureLights.h
install-platform/: install-linux.sh  install-macOS.sh  install-windows-ucrt64.sh
installation/: Brewfile  common.sh  install-arch.sh  install-dependencies.sh  install-linux.sh  install-macOS.sh  install-raspberry-pi.sh  install-umfeld.sh  install-windows-ucrt64.sh
src/: Capture.cpp  Capture.mm  Capture.mm.cpp  MIDI.cpp  Movie.cpp  PAudio.cpp  PFont.cpp  PGraphics.cpp  PGraphicsOpenGL.cpp  PGraphicsOpenGL_2_0.cpp  PGraphicsOpenGL_3.cpp  PGraphicsOpenGL_3_3_core.cpp  PGraphicsOpenGLv20.cpp  PGraphicsOpenGLv33.cpp  PImage.cpp  PShader.cpp  PShape.cpp  Serial.cpp  ShapeRendererImmediateOpenGL_3.cpp  ShapeRendererOpenGL_3.cpp  SubsystemAudioPortAudio.cpp  SubsystemAudioSDL.cpp  SubsystemGamepad.cpp  SubsystemGraphicsOpenGLES30.cpp  SubsystemGraphicsOpenGL_2_0.cpp  SubsystemGraphicsOpenGL_3_3_core.cpp  SubsystemGraphicsOpenGL_ES_3_0.cpp  SubsystemGraphicsOpenGLv20.cpp  SubsystemGraphicsOpenGLv33.cpp  SubsystemGraphicsSDL2D.cpp  SubsystemGraphicsTemplate.cpp  SubsystemGraphicsTerminal.cpp  SubsystemHIDEvents.cpp  SubsystemLibraries.cpp  UShapeRendererOpenGL_3.cpp  Umfeld.cpp  UmfeldCallbacks.cpp  UmfeldFunctions.cpp  UmfeldFunctionsAdditional.cpp  UmfeldFunctionsGraphics.cpp  (+2 more)
template-application/: CMakeLists.txt
tools/: umfeld-clean-RPI-installation.sh  umfeld-create-RPI-image.sh
umfeld/: .clang-tidy  boards.txt  package.json  platform.txt
umfeld/cores/sdl/: Arduino.h  ArduinoFunctions.h
umfeld/cores/sdl/umfeld/: CMakeLists.txt  README.md  RELEASE_NOTES.md  install.sh
umfeld/cores/sdl3/umfeld/: CMakeLists.txt  TODO.md
umfeld/examples/: run.sh
umfeld/examples/klangstrom-emulator/: run.sh
umfeld/examples/klangstrom-emulator/minimal/: minimal.ino
umfeld/examples/test/: test.ino
umfeld/examples/umfeld/: run.sh
umfeld/examples/umfeld/load-image/: load-image.ino
umfeld/examples/umfeld/test/: test.ino
umfeld/variants/KLST_EMU/: variant_KLST_Emulator.cpp  variant_KLST_Emulator.h
umfeld/variants/UMFELD/: variant_Umfeld.cpp  variant_Umfeld.h
umfeld/variants/UMFELD_TOOL/: variant_Umfeld.h  variant_UmfeldTool.cpp  variant_UmfeldTool.h
umgebung/: boards.txt  package.json  platform.txt
umgebung/examples/: run.sh
umgebung/extras/: check-for-tools.sh  find_sdl.sh
(+278 files in other folders)
